--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
        </div>
       </div>
       <section class="info">
-        <div class="wrapper">
+        <div class="block-wrapper">
           <h2 class="info-title">why to choose us</h2>
           <p class="info-description">
             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
@@ -122,7 +122,7 @@
         </div>
       </section>
       <section class="yellow">
-        <div class="wrapper flex">
+        <div class="block-wrapper flex">
           <div class="corporate">
             <h3 class="corporate-title">corporate</h3>
             <p class="company-description">
@@ -167,6 +167,10 @@
               </p>
             </li>
           </ul>
+        </div>
+      </article>
+      <section class="brands">
+        <div class="block-wrapper">
           <h3 class="client-title">our clients</h3>
           <p class="client-info">There are many variations of passages of Lorem Ipsum available</p>
           <ul class="clients">
@@ -175,20 +179,24 @@
             <li class="client"><img src="https://via.placeholder.com/127x97?text=client" alt="brands"></li>
             <li class="client"><img src="https://via.placeholder.com/127x97?text=client" alt="brands"></li>
           </ul>
-          <div class="manager">
-            <figure class="manager-img"><img src="https://via.placeholder.com/150x150?text=manager" alt="manager"></figure>
-            <div class="manager-info">
-              <h3 class="manager-statement">There are many variations of passages of Lorem Ipsum available</h3>
-              <span class="details">marks twitter</span>
+        </div>
+       </section>
+        <section class="testimonial">
+          <div class="block-wrapper">
+            <div class="manager">
+              <figure class="manager-img"><img src="https://via.placeholder.com/150x150?text=manager" alt="manager"></figure>
+              <div class="manager-info">
+                <h3 class="manager-statement">There are many variations of passages of Lorem Ipsum available</h3>
+                <span class="details">marks twitter</span>
+              </div>
+              <div class="controls">
+                <button class="control control-active">a</button>
+                <button class="control">a</button>
+                <button class="control">a</button>
+              </div>
             </div>
           </div>
-          <div class="controls">
-            <button class="control control-active">a</button>
-            <button class="control">a</button>
-            <button class="control">a</button>
-          </div>
-        </div>
-      </article>
+        </section>
     </main>
     <!--main section end-->
 
