--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="#FIXME" title="page">gym</a>
             </li>
             <li class="nav-item">
-              <a href="#FIXME" title="page">gym</a>
+              <a href="#FIXME" title="page" class="active">gym</a>
             </li>
           </ul>
           <button class="menu">menu</button>
@@ -122,7 +122,7 @@
         </div>
       </section>
       <section class="yellow">
-        <div class="block-wrapper flex">
+        <div class="wrapper flex">
           <div class="corporate">
             <h3 class="corporate-title">corporate</h3>
             <p class="company-description">
@@ -135,7 +135,7 @@
         </div>
       </section>
       <article>
-        <div class="wrapper">
+        <div class="block-wrapper">
           <h3 class="article-title">work team</h3>
           <p class="article-info">There are many variations of passages of Lorem Ipsum available</p>
           <ul class="cards">
@@ -189,11 +189,11 @@
                 <h3 class="manager-statement">There are many variations of passages of Lorem Ipsum available</h3>
                 <span class="details">marks twitter</span>
               </div>
-              <div class="controls">
-                <button class="control control-active">a</button>
-                <button class="control">a</button>
-                <button class="control">a</button>
-              </div>
+            </div>
+            <div class="controls">
+              <button class="control control-active">a</button>
+              <button class="control">a</button>
+              <button class="control">a</button>
             </div>
           </div>
         </section>
@@ -207,11 +207,11 @@
           <div class="builder">
             <h3 class="builder-title">ja builder</h3>
             <ul class="icons">
+              <li class="icon fb"><a href="#FIXME" title="social media"></a> a</li>
               <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
-              <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
-              <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
-              <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
-              <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
+              <li class="icon in"><a href="#FIXME" title="social media"></a> a</li>
+              <li class="icon g"><a href="#FIXME" title="social media"></a> a</li>
+              <li class="icon pinter"><a href="#FIXME" title="social media"></a> a</li>
             </ul>
           </div>
           <ul class="pages">
