--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p class="company-info">
               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration 
             </p>
-            <h3 class="company-title">Joomlart?</h3>
+            <h3 class="company-title">why Joomlart?</h3>
             <p class="company-description">
               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
               or randomised words which don't look even slightly believable.
