--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
               <a href="#FIXME" title="page">gym</a>
             </li>
             <li class="nav-item">
-              <a href="#FIXME" title="page">gym</a>
+              <a href="#FIXME" title="page" class="active">gym</a>
             </li>
           </ul>
-          <button class="menu">menu</button>
+          <button class="menu" >menu</button>
         </nav>
       </div>
     </header>
@@ -62,7 +62,7 @@
        </div>
       </div>
       <section class="info">
-        <div class="wrapper">
+        <div class="block-wrapper">
           <h2 class="info-title">why to choose us</h2>
           <p class="info-description">
             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
@@ -111,7 +111,7 @@
             <p class="company-info">
               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration 
             </p>
-            <h3 class="company-title">Joomlart?</h3>
+            <h3 class="company-title">why Joomlart?</h3>
             <p class="company-description">
               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
               or randomised words which don't look even slightly believable.
@@ -135,7 +135,7 @@
         </div>
       </section>
       <article>
-        <div class="wrapper">
+        <div class="block-wrapper">
           <h3 class="article-title">work team</h3>
           <p class="article-info">There are many variations of passages of Lorem Ipsum available</p>
           <ul class="cards">
@@ -167,6 +167,10 @@
               </p>
             </li>
           </ul>
+        </div>
+      </article>
+      <section class="brands">
+        <div class="block-wrapper">
           <h3 class="client-title">our clients</h3>
           <p class="client-info">There are many variations of passages of Lorem Ipsum available</p>
           <ul class="clients">
@@ -175,20 +179,24 @@
             <li class="client"><img src="https://via.placeholder.com/127x97?text=client" alt="brands"></li>
             <li class="client"><img src="https://via.placeholder.com/127x97?text=client" alt="brands"></li>
           </ul>
-          <div class="manager">
-            <figure class="manager-img"><img src="https://via.placeholder.com/150x150?text=manager" alt="manager"></figure>
-            <div class="manager-info">
-              <h3 class="manager-statement">There are many variations of passages of Lorem Ipsum available</h3>
-              <span class="details">marks twitter</span>
+        </div>
+       </section>
+        <section class="testimonial">
+          <div class="block-wrapper">
+            <div class="manager">
+              <figure class="manager-img"><img src="https://via.placeholder.com/150x150?text=manager" alt="manager"></figure>
+              <div class="manager-info">
+                <h3 class="manager-statement">There are many variations of passages of Lorem Ipsum available</h3>
+                <span class="details">marks twitter</span>
+              </div>
+            </div>
+            <div class="controls">
+              <button class="control control-active">a</button>
+              <button class="control">a</button>
+              <button class="control">a</button>
             </div>
           </div>
-          <div class="controls">
-            <button class="control control-active">a</button>
-            <button class="control">a</button>
-            <button class="control">a</button>
-          </div>
-        </div>
-      </article>
+        </section>
     </main>
     <!--main section end-->
 
@@ -199,11 +207,11 @@
           <div class="builder">
             <h3 class="builder-title">ja builder</h3>
             <ul class="icons">
+              <li class="icon fb"><a href="#FIXME" title="social media"></a> a</li>
               <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
-              <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
-              <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
-              <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
-              <li class="icon twitter"><a href="#FIXME" title="social media"></a> a</li>
+              <li class="icon in"><a href="#FIXME" title="social media"></a> a</li>
+              <li class="icon g"><a href="#FIXME" title="social media"></a> a</li>
+              <li class="icon pinter"><a href="#FIXME" title="social media"></a> a</li>
             </ul>
           </div>
           <ul class="pages">
